readme y link mapa

--- a/codigo/analisisR.html
+++ b/codigo/analisisR.html
@@ -1919,8 +1919,7 @@ barrios visualizados en función del valor de su indicador.</li>
 <li><strong>Tabla de indicadores.</strong> Permite visualizar y buscar
 por por barrios, distritos e indicador seleccionado.</li>
 </ul>
-<p>El mapa está publicado en <a href="https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2" class="uri">https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2</a>
-.</p>
+<p>El mapa está publicado en <a href="https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2" class="uri">https://pinea.app.carto.com/map/4aced469-f471-438e-8050-1f6b26d874d2</a></p>
 </div>
 </div>
 </div>
@@ -2154,8 +2153,7 @@ arrange(desc(barrios_por_distrito))</code></pre>
 de carto</h2>
 <p>He generado el mapa denoninado <em>Clasificación de barrios según
 indicadores de gentrificación</em></p>
-<p>El mapa está publicado en <a href="https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e" class="uri">https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e</a>
-. Su contraseña es PEC3</p>
+<p>El mapa está publicado en <a href="https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e" class="uri">https://pinea.app.carto.com/map/5847c277-513e-4931-8e5c-b2efc0788f8e</a></p>
 <p>El mapa se compone de 3 capas:</p>
 <ul>
 <li>La capa superior muestra los barrios con su grado de gentrificación.
